---------------------------------------------------------------------------------------------------
Version: 1.6.12
Date: 13/2/26
  Features:
    - Added /set-raw-item-value command, which tells the item value solver which items are raw resources.
    - Added /solve-item-values command, which can be ran after changing raw item values.
---------------------------------------------------------------------------------------------------
Version: 1.6.11
Date: 11/2/26
  Bugfixes:
    - Fixed biter ramming crash.
---------------------------------------------------------------------------------------------------
Version: 1.6.10
Date: 11/2/26
  Bugfixes:
    - Fixed that trades wouldn't work in hex cores that didn't contain a non-coin item of the same quality as the trade's current quality setting.
---------------------------------------------------------------------------------------------------
Version: 1.6.9
Date: 10/2/26
  Features:
    - On game start or first time joining a server, you are now shown a GUI explaining the very basics of the mod.
    - Added quest "Color Coding".
    - Added a quest for each planet called "Grabbing The Milk".
  Changes:
    - Moved the "Too Many Belts" quest behind the "Trades Galore" quest.
  Gui:
    - Potentially fixed the big vertical scroll bar issue for displays with dense DPIs.
  Bugfixes:
    - Fixed hex core iteration (some hex cores got ignored randomly, causing some trades to stop working in seemingly random order).
    - Fixed rare issue where some states could randomly disappear from the hex core processing pools (unprecedented as of yet).
---------------------------------------------------------------------------------------------------
Version: 1.6.8
Date: 9/2/26
  Features:
    - Added world generation modes "Triangular", "Ribbon", "Ribbon Maze", "Spider Web", "Lattice", "Clusters", "Donut", and "Solid".