@@ -4,6 +4,7 @@ Date: 13/2/26
   Features:
     - Added /set-raw-item-value command, which tells the item value solver which items are raw resources.
     - Added /solve-item-values command, which can be ran after changing raw item values.
+    - The /export-item-values command now also includes item value sources and recipe data for use with the Hextorio Item Value Explorer web tool.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.11
 Date: 11/2/26
